--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -18,7 +18,9 @@
   h3 {
     @apply uppercase text-xs text-center mb-4;
   }
-
+  p {
+    @apply mb-4;
+  }
   section a {
     @apply border pt-2 pb-1 px-5 uppercase hover:bg-orange hover:text-purple hover:border-purple transition-colors;
   }
